snippets/Nemerle.Statechart/Tests/testsuite/positive/do_activity_with_same_action.n
using Nemerle;
using Nemerle.Collections;
using Nemerle.Text;
using Nemerle.Utility;

using System;
using Nemerle.Statechart;

using System.Collections.Generic;
using System.Linq;

  /// <summary>
  /// Description of junction_example.
  /// </summary>
  [statechart(
  <#
  flags testing;
  name "do activity with same name";
  
  state A
  {
    do / act1;
    a => B;
  }

  state B
  {
    do / act1;
    a => A;
  }
  
  #>)]
public class example
{
}

module Test
{
  Main() : void
  {
    def fsm = example();
    def tester = fsm.GetTester();
    tester.ConsoleTestInit();
    tester.Initiate("A", "EntryA");
    tester.Test("a", "B", "ExitA", "EntryB");
    tester.Test("a", "A", "ExitB", "EntryA");
    fsm.Terminate();
  }
}

/*
BEGIN-OUTPUT
EntryA
[A]
Ok
Processing a 'a' 
ExitA
EntryB
[B]
Ok
Processing a 'a' 
ExitB
EntryA
[A]
Ok
END-OUTPUT
*/
