snippets/Nemerle.Statechart/Tests/testsuite/negative/unknown_target.n
using Nemerle;
using Nemerle.Collections;
using Nemerle.Text;
using Nemerle.Utility;

using System;
using Nemerle.Statechart;

using System.Collections.Generic;
using System.Linq;

  /// <summary>
  /// Description of example.
  /// </summary>
  [statechart(
  <#
  
  state A
  {
    a => B.a; // E: Transition "TransitionAToB.aBya" has unknown target "B.a"
  }
  
  #>)]
  public class example
  {
  }

